@@ -122,7 +122,7 @@
         <enum-item name='Dynamic' comment='doors, grates, etc'/>
     </enum-type>
 
-    <bitfield-type type-name='tile_occupancy'>
+    <bitfield-type type-name='tile_occupancy' base-type='uint32_t'>
         <flag-bit name='building' count='3' type-name='tile_building_occ'/>
         <flag-bit name='unit' comment='standing'/>
         <flag-bit name='unit_grounded' comment='prone'/>
