@@ -229,7 +229,7 @@
         <int16_t name='subtype'/>
         <int16_t name='material' ref-target='material' aux-value='$$.matgloss'/>
         <int32_t name='matgloss'/>
-        <bitfield name='specflag' type-name='stockpile_group_set'/>
+        <compound name='specflag' type-name='job_spec_flags'/>
         <int32_t name='spec_id' comment='refers to various things, such as histfigs OR races'/>
         <bitfield name='job_item_flag' type-name='job_material_category'/>
         <bool name='add_building_location'/>
